many changes for backend

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -3,11 +3,18 @@ server:
     include-message: always
 spring:
   application:
-    name: PolishLearn
-  data:
-    mongodb:
-      database: ${MONGODB_DATABASE}
-      uri: ${MONGODB_URI}
+    name: LearningApp
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: ${POSTGRESQL_URL}
+    username: ${POSTGRESQL_USERNAME}
+    password: ${POSTGRESQL_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 security:
   jwt:
     secret-key: AzomDE3TeXUOtYaOP/mkRvDd6br4l2Qm8RffNQkD1KE=
