--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@types/react-redux": "^7.1.34",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "i18next": "^24.0.2",
     "react": "18.2.0",
+    "react-i18next": "^15.1.2",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-paper": "^5.12.5",
