--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/react-redux": "^7.1.34",
+    "axios": "^1.7.9",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "i18next": "^24.0.2",
