--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-i18next": "^15.1.2",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1308.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.1",
