--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,29 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.7.9",
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.44",
+    "expo-status-bar": "~2.0.1",
     "i18next": "^24.0.2",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-i18next": "^15.1.2",
-    "react-native": "0.74.5",
+    "react-native": "0.76.9",
     "react-native-calendars": "^1.1308.0",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^3.35.0",
+    "react-native-reanimated": "3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
+    "metro": "^0.81.0",
     "typescript": "^5.1.3"
   },
   "private": true
