--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@stomp/stompjs": "^7.1.0",
     "@types/react-redux": "^7.1.34",
+    "@types/sockjs-client": "^1.5.4",
     "axios": "^1.7.9",
     "expo": "^52.0.44",
     "expo-status-bar": "~2.0.1",
@@ -27,7 +29,9 @@
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-redux": "^9.1.2"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
