--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "@reduxjs/toolkit": "^2.3.0",
     "@stomp/stompjs": "^7.1.0",
-    "@types/react-redux": "^7.1.34",
     "@types/sockjs-client": "^1.5.4",
     "axios": "^1.7.9",
     "expo": "^52.0.44",
@@ -30,8 +28,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.1.2",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
