--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-native-calendars": "^1.1308.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dates": "^0.22.40",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "4.12.0",
